--- a/Play.Customer/src/Play.Customer.Service/Play.Customer.Service.csproj
+++ b/Play.Customer/src/Play.Customer.Service/Play.Customer.Service.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
     <PackageReference Include="Play.Base.Service" Version="1.0.0" />
+    <PackageReference Include="Polly" Version="8.5.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
